@@ -90,8 +90,18 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
-
+        <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>testfx-junit</artifactId>
+            <version>4.0.18</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <profiles>
@@ -233,6 +243,33 @@
                         <arg>--add-exports</arg>
                         <arg>javafx.controls/com.sun.javafx.scene.control.skin=com.bitifyware.codearea</arg>
                     </compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
+                <configuration>
+                    <argLine>
+                        -ea
+                        --add-exports javafx.base/com.sun.javafx.binding=com.bitifyware.codearea
+                        --add-exports javafx.base/com.sun.javafx.binding=ALL-UNNAMED
+                        --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                        --add-exports javafx.graphics/com.sun.javafx.util=com.bitifyware.codearea
+                        --add-exports javafx.graphics/com.sun.javafx.application=com.bitifyware.codearea
+                        --add-exports javafx.base/com.sun.javafx.collections=ALL-UNNAMED
+                        --add-exports javafx.base/com.sun.javafx.collections=com.bitifyware.codearea
+                        --add-exports javafx.controls/com.sun.javafx.scene.control.behavior=com.bitifyware.codearea
+                        --add-exports javafx.controls/com.sun.javafx.scene.control=com.bitifyware.codearea
+                        --add-exports javafx.controls/com.sun.javafx.scene.control.skin.resources=com.bitifyware.codearea
+                        --add-exports javafx.controls/com.sun.javafx.scene.control.inputmap=com.bitifyware.codearea
+                        --add-exports javafx.controls/com.sun.javafx.scene.control.skin=com.bitifyware.codearea
+                        --add-exports javafx.graphics/com.sun.javafx.tk=com.bitifyware.codearea
+                        --add-exports javafx.graphics/com.sun.javafx.scene.input=com.bitifyware.codearea
+                        --add-exports javafx.graphics/com.sun.javafx.scene.text=com.bitifyware.codearea
+                        --add-exports javafx.graphics/com.sun.javafx.geom=com.bitifyware.codearea
+                        --add-exports javafx.base/com.sun.javafx=com.bitifyware.codearea
+                    </argLine>
                 </configuration>
             </plugin>
         </plugins>
